# inline-python

./: cabal.project
inline-python/: inline-python.cabal
inline-python-tests/: inline-python-tests.cabal
