Cabal-Version:  3.0
Build-Type:     Simple

Name:           inline-python-tests
Version:        0.2
Synopsis:       Tests and benchmarks for inline-python
License:        BSD-3-Clause
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       https://github.com/Shimuuar/inline-python
Bug-reports:    https://github.com/Shimuuar/inline-python/issues
Category:       FFI

common language
  Ghc-options:          -Wall
  Default-Language:     GHC2021
  Default-Extensions:
    NoPolyKinds
    --
    DeriveAnyClass
    DerivingVia
    PatternSynonyms
    ViewPatterns
    LambdaCase
    MultiWayIf
    --
    NoFieldSelectors
    DuplicateRecordFields
    OverloadedRecordDot

----------------------------------------------------------------
library
  import:           language
  Default-Extensions:
    QuasiQuotes
  build-depends:    base
                  , inline-python
                  , tasty                >=1.2
                  , tasty-hunit          >=0.10
                  , tasty-quickcheck     >=0.10
                  , quickcheck-instances >=0.3.32
                  , exceptions
                  , containers
                  , vector
                  , bytestring
                  , text
  hs-source-dirs:   test
  Exposed-modules:
    TST.Run
    TST.ToPy
    TST.FromPy
    TST.Callbacks
    TST.Roundtrip
    TST.Util

-- Running tests using several threads does very good job at finding threading
-- bugs. Especially deadlocks
test-suite inline-python-tests
  import:           language
  type:             exitcode-stdio-1.0
  Ghc-options:      -threaded -with-rtsopts=-N2
  hs-source-dirs:   test/exe
  main-is:          main.hs
  build-depends:    base
                  , inline-python
                  , inline-python-tests
                  , tasty

test-suite inline-python-tests1
  import:           language
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test/exe
  main-is:          main.hs
  build-depends:    base
                  , inline-python
                  , inline-python-tests
                  , tasty

benchmark pysmall
  import:           language
  type:             exitcode-stdio-1.0
  Ghc-options:      -threaded
  main-is:          Main.hs
  hs-source-dirs:   bench
  build-depends:
        base >= 2 && < 5
      , inline-python
      , tasty
      , tasty-bench >= 0.2.1

benchmark pysmall1
  import:           language
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   bench
  build-depends:
        base >= 2 && < 5
      , inline-python
      , tasty
      , tasty-bench >= 0.2.1
